tests/fail/semantic/builtin_as_product.cyt
rule () -> int

// args: --no-colour

// expected stderr:
// error: builtin type `int` cannot be used as a product
//   ┌─ ../tests/fail/semantic/builtin_as_product.cyt:1:12
//   │
// 1 │ rule () -> int
//   │            ^^^ builtin type cannot be used a product